Fix reaction alignment with gamification installed (100% width post footer items)
Fixes #48

--- a/resources/less/forum.less
+++ b/resources/less/forum.less
@@ -95,6 +95,7 @@
 
     .Reactions--react {
         display: inline-block;
+        position: relative;
 
         &:hover .CommentPost--Reactions {
             visibility: visible;
